--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>main</title>
+    <title>index</title>
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
